# home-barcode-api

./: .gitignore  .local.env.tmpl  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  packaging-requirements.txt  pyproject.toml
.github/workflows/: push-docker-image  push-docker-image.yml
barcode_api/: main.py
barcode_api/controller/: __init__.py  albums_controller.py
barcode_api/core/: database.py
barcode_api/core/config/: __init__.py
barcode_api/core/dependencies/: database.py
barcode_api/core/errors/: __init__.py  _base.py
barcode_api/core/logging/: __init__.py
barcode_api/core/middlewares/: config_middleware.py  logging_middleware.py
barcode_api/migrations/: env.py
barcode_api/migrations/versions/: 41659a4102f5_on_update_and_default.py  489fefb9fdf0_on_update.py  81a33c1b8fa2_initial_database_structure.py  cc8b2ba7302c_more_columns.py  e3f41110a693_artist_and_album_name_are_nonunique.py
barcode_api/models/: __init__.py  albums.py  api_tokens.py
barcode_api/schemas/dto/: albums_dto.py  errors_dto.py
barcode_api/services/: __init__.py  _base.py  album_service.py
tests/: conftest.py
tests/test_services/: test_album_service.py
